# strainphase

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_FIXES_SUMMARY.md  BENCHMARK_FIX_ANALYSIS.md  DISTANCE_SHARED_SNVS_SANITY_CHECK.md  LICENSE  MANIFEST.in  PARAMETER_REDUCTION_PROPOSAL.md  README.md  README_SYNTHETIC_TOOLS.md  agents.md  environment_strainy_validation.yml  progress.json  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  benchmark_performance.py  best_params.json  build_test_cases.py  cluster_benchmark.sh  generate_ground_truth.py  generate_report.py  generate_rescue_figure_data.py  parameter_sweep.py  prepare_isolate_mix.py  run_cluster_benchmark.sh  run_coverage_defaults.sh  run_floria_validation.sh  run_focused_test.sh  run_full_benchmark.py  run_strainy_validation.sh  simulate_from_fasta.sh  test_configs.json
docs/: INSTALLATION.md  haplotyper_code_review.pptx  haplotypes.afpub  haplotypes.afpub~lock~  parameter_choice_justification.md
docs/manuscript/: strainphase_manuscript.md
docs/tutorials/: TUTORIAL.md
src/strainphase/: __init__.py  cli.py  core.py  longitudinal.py
src/strainphase/simulation/: __init__.py
src/strainphase/tests/: __init__.py  parameter_sweep.py  test_core.py
strainphase/: __init__.py  cli.py  core.py  longitudinal.py
strainphase/simulation/: __init__.py  synthetic_data.py
testing_and_validation/: ORGANIZATION_SUMMARY.md  QUICK_START.md  README.md
testing_and_validation/examples/: slurm_array.sh
testing_and_validation/results/validation/: validation_metrics.json
testing_and_validation/synthetic_community_tools/: QUICKSTART.md  README.md  README_synthetic_community.md  SETUP_COMPLETE.md  generate_synthetic_community.py  test_synthetic_community.py
testing_and_validation/validation_scripts/: README.md  add_high_complexity_scenario.py  benchmark_performance.py  test_and_figure.py  test_synthetic_quick.py  validate_synthetic.py
tests/: README.md  __init__.py  test_core.py  test_longitudinal.py  test_parsing.py  util_io.py
validation/: README.md  __init__.py  convert_floria.py  convert_strainy.py  download_real_genomes.py  simulate_reads.py  test_and_figure.py  validate_haplotypes.py  validate_lineages.py  validate_synthetic.py  validate_tracks.py
