[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strainphase"
version = "0.1.0"
description = "Hybrid graph-probabilistic haplotype reconstruction for PacBio HiFi metagenomic data"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Renee Oles", email = "roles@ucsd.edu"}
]
maintainers = [
    {name = "Renee Oles", email = "roles@ucsd.edu"}
]
keywords = [
    "metagenomics",
    "haplotype",
    "strain",
    "microbiome",
    "pacbio",
    "hifi",
    "longitudinal",
    "IBD",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "networkx>=2.6",
    "pandas>=1.3",
    "python-louvain>=0.16",
]

[project.optional-dependencies]
full = [
    "pysam>=0.19",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
all = [
    "strainphase[full,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/rolesucsd/strainphase"
Documentation = "https://strainphase.readthedocs.io"
Repository = "https://github.com/rolesucsd/strainphase"
Issues = "https://github.com/rolesucsd/strainphase/issues"

[project.scripts]
strainphase = "strainphase.cli:main"

[project.entry-points."strainphase.commands"]
run = "strainphase.cli:cmd_run"
longitudinal = "strainphase.cli:cmd_longitudinal"
test = "strainphase.cli:cmd_test"
sweep = "strainphase.cli:cmd_sweep"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "benchmarks*", "validation*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
